--- a/product-landing-page/css/main.css
+++ b/product-landing-page/css/main.css
@@ -10,24 +10,44 @@
 }
 
 .flex--wrap {
-    flex-wrap: nowrap;
-}
-
-.flex--no-wrap {
     flex-wrap: wrap;
 }
 
-.footer__link {
-    justify-content: center;
-    align-items: center;
+.flex--no-wrap {
+    flex-wrap: nowrap;
 }
 
-
 /* Block -------------------------------------------------------------*/
+.feature-callout {
+    max-width: 930px;
+    margin: 0% auto 3% auto;
+    padding-left: 6%;
+    padding-right: 6%;
+}
 
+input[type="submit"] {
+    background-color: #374785;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: block;
+    margin: 25px auto 0px auto;
+    font-size: 16px;
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
 /* Element -----------------------------------------------------------*/
+.nav-menu__logo {
+    padding: 2% 0% 2% 2%;
+    width: 10%;
+}
 
+.nav-menu__link {
+    margin: 0% 2% 0% 2%;
+    padding: 2% 2% 2% 0%;
+}
 
 /* Modifier -----------------------------------------------------------*/
 
@@ -47,46 +67,16 @@
 }
   
 /* Generic styles ----------------------------------------------*/
-body {
-    /*
-    yellow: #F8E9A1
-    red: F76C6C
-    light-blue: A8D0E6
-    medium-blue: 374785
-    dark-blue: #24305E
-    */
+header, main, footer {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
-    color: #4a4c5b;
-    margin: 0px; /* reset browser margins */
-
-}
-
-.styled-heading {
-    font-family: 'Playfair Display', sans-serif;
-}
-
-.bolded {
-    font-weight: 600;
+    color: black;
+    padding-left: 3%;
+    padding-right: 3%
 }
 
 .centered {
     text-align: center;
-}
-
-.logo {
-    padding: 2% 0% 2% 2%;
-    width: 10%;
-}
-
-.nav-links {
-    width: 90%;
-    padding: 2% 2% 2% 0%;
-}
-
-.link-item {
-    margin-left: 2%;
-    margin-right: 2%
 }
 
 .attribution {
@@ -94,43 +84,28 @@ body {
     margin-bottom: 3em;
 }
 
-.tagline, .reinforcement-statement {
-    margin: 2% 6% 4% 6%;
+.headline h1 {
+    margin-top: 2em;
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 4rem;
+    text-align: left;
+    color: black;
 }
 
-.tagline {
+.headline p {
+    font-size: 1.25rem;
     text-align: left;
 }
 
-.tagline h1 {
-    margin-top: 2em;
-    font-size: 4rem;
-    color: black;
+.reinforcement-statement__heading {
+    font-family: 'Playfair Display', sans-serif;
 }
 
-.tagline p {
-    font-size: 1.25rem;
-}
-
-.reinforcement-statement {
+.reinforcement-statement--centered {
     text-align: center;
-    color: black;
 }
 
-.learn-more {
-    display: block;
-    text-align: center;
-    margin: 0% auto 10% auto;
-}
-
-.feature-flex-container {
-    max-width: 930px;
-    margin: 0% auto 3% auto;
-    padding-left: 6%;
-    padding-right: 6%;
-}
-
-.case-flex-container {
+.social-proof-gallery {
     max-width: 1000px;
     margin: 0px auto 0px;
 }
@@ -142,6 +117,17 @@ body {
     margin: 20px;
 }
 
+.social-proof-card__title {
+    font-weight: 600;
+    padding: 0% 4% 0% 4%;
+}
+
+.social-proof-card__heading {
+    font-size: 1.75em;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
 .social-proof-card__figure {
     max-width: 100%;
     height: auto;
@@ -150,29 +136,14 @@ body {
     position: relative;
 }
 
-.social-proof-card h1 {
-    font-size: 1.75em;
+.social-proof-card__link  {
     padding: 0% 4% 0% 4%;
-    color: black;
-}
-
-.social-proof-card h2 {
-    margin: 0;
-    padding: 4%;
     text-align: center;
-    color: black;
 }
 
-.social-proof-card h3  {
-    padding: 0% 4% 0% 4%;
-    color: black;
-}
-
-.case-link {
-    background: purple;
-}
-
-.get-started {
+.trial-form {
+    display: block;
+    width: 100%;
     background-color: #374785;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%2333427d' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%232f3e75' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%232c396e' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23283566' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2324305e' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -181,54 +152,22 @@ body {
     text-align: center;
 }
 
-.get-started h1 {
+.trial-form__text  {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 1.75em;
     position: relative;
     color: white;
 }
 
-.get-started input[type="submit"] {
+.trial input[type="submit"] {
     background-color: white;
     color: #374785;
 }
 
-input[type="submit"] {
-    background-color: #374785;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: block;
-    margin: 25px auto 0px auto;
-    font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-.footer-grid {
+.footer-grid-wrapper {
     margin: 50px auto 50px auto;
     padding: 0px 15px 0px 15px;
-}
-
-.footer-grid {
     max-width: 930px;
-}
-
-.footer-nav-box {
-    margin: 0px auto 0px auto;
-}
-
-.misc-container {
-    margin-top: 1%;
-    background: #f2f2f2;
-    height: 7%;
-    font-weight: 600;
-    font-size: 1em;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-.footer__link__item {
-    margin: 0px 15px 0px 15px;
 }
 
 /* desktop */
