--- a/product-landing-page/css/main.css
+++ b/product-landing-page/css/main.css
@@ -1,5 +1,5 @@
 /* Grid styles -------------------------------------------------*/
-.footer-grid {
+.footer-grid-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -25,17 +25,48 @@
     padding-right: 6%;
 }
 
+.cta-form {
+    min-width: 20%;
+    text-align: center;
+}
+
 input[type="submit"] {
-    background-color: #374785;
+    background-color: #373737;
     border-radius: 5px;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
+}
+
+input[id="submit-cta"] {
     display: block;
     margin: 25px auto 0px auto;
-    font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif;
+}
+
+input[id="submit-get-started"] {
+    display: block;
+    margin: 25px auto 0px auto;
+}
+
+.social-proof-card {
+    border-radius: 3px;
+    box-shadow: 2px 2px 15px #efefef;
+    max-width: 450px;
+    margin: 20px;
+}
+
+.trial-form {
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='50' height='25' viewBox='0 0 50 25'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.1' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='2' height='2' patternUnits='userSpaceOnUse'%3E%3Cg stroke='%23ffffff' stroke-width='0.1'%3E%3Crect fill='%23fafafa' width='1' height='1'/%3E%3Crect fill='%23ffffff' width='1' height='1' x='1' y='1'/%3E%3Crect fill='%23f5f5f5' width='1' height='1' y='1'/%3E%3Crect fill='%23f0f0f0' width='1' height='1' x='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='b' width='5' height='11' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ebebeb'%3E%3Cuse xlink:href='%23s' x='2' y='0'/%3E%3Cuse xlink:href='%23s' x='4' y='1'/%3E%3Cuse xlink:href='%23s' x='1' y='2'/%3E%3Cuse xlink:href='%23s' x='2' y='4'/%3E%3Cuse xlink:href='%23s' x='4' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='8'/%3E%3Cuse xlink:href='%23s' x='3' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='7' height='7' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23e5e5e5'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='3' y='4'/%3E%3Cuse xlink:href='%23s' x='5' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='11' height='5' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ffffff'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='6' y='3'/%3E%3Cuse xlink:href='%23s' x='8' y='2'/%3E%3Cuse xlink:href='%23s' x='3' y='0'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3Cg fill='%23e0e0e0'%3E%3Cuse xlink:href='%23s' x='8' y='3'/%3E%3Cuse xlink:href='%23s' x='4' y='2'/%3E%3Cuse xlink:href='%23s' x='5' y='4'/%3E%3Cuse xlink:href='%23s' x='10' y='0'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='23' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23BA7'%3E%3Cuse xlink:href='%23s' x='2' y='5'/%3E%3Cuse xlink:href='%23s' x='23' y='13'/%3E%3Cuse xlink:href='%23s' x='4' y='18'/%3E%3Cuse xlink:href='%23s' x='35' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='61' height='31' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23BA7'%3E%3Cuse xlink:href='%23s' x='16' y='0'/%3E%3Cuse xlink:href='%23s' x='13' y='22'/%3E%3Cuse xlink:href='%23s' x='44' y='15'/%3E%3Cuse xlink:href='%23s' x='12' y='11'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='50' height='25'/%3E%3Crect fill='url(%23b)' width='50' height='25'/%3E%3Crect fill='url(%23c)' width='50' height='25'/%3E%3Crect fill='url(%23d)' width='50' height='25'/%3E%3Crect fill='url(%23e)' width='50' height='25'/%3E%3Crect fill='url(%23f)' width='50' height='25'/%3E%3C/svg%3E");
+    background-attachment: scroll;
+    background-size: cover;
+    padding: 3em 0 3em 0;
+    text-align: center;
+}
+
+.link-box {
+    text-align: center;
 }
 
 /* Element -----------------------------------------------------------*/
@@ -45,46 +76,11 @@ input[type="submit"] {
 }
 
 .nav-menu__link {
-    margin: 0% 2% 0% 2%;
-    padding: 2% 2% 2% 0%;
+    margin: 0% 2% 0% 0%;
+    padding: 2% 0% 2% 0%;
 }
 
-/* Modifier -----------------------------------------------------------*/
-
-
-/* Nav bar stickiness -------------------------------------------------*/
-
-#nav-bar {
-    overflow: hidden;
-    position: fixed;
-    background: white;
-    top: 0;
-    width: 100%
-}
-
-.main {
-    margin-top: 30px;
-}
-  
-/* Generic styles ----------------------------------------------*/
-header, main, footer {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 400;
-    color: black;
-    padding-left: 3%;
-    padding-right: 3%
-}
-
-.centered {
-    text-align: center;
-}
-
-.attribution {
-    font-size: .5em;
-    margin-bottom: 3em;
-}
-
-.headline h1 {
+.headline__heading {
     margin-top: 2em;
     font-family: 'Playfair Display', sans-serif;
     font-size: 4rem;
@@ -92,29 +88,32 @@ header, main, footer {
     color: black;
 }
 
-.headline p {
+.headline__text {
     font-size: 1.25rem;
     text-align: left;
+}
+
+.cta-form input {
+    font-size: 1.5em;
+    min-width: 300px;
+    display: inline-block;
 }
 
 .reinforcement-statement__heading {
     font-family: 'Playfair Display', sans-serif;
 }
 
-.reinforcement-statement--centered {
-    text-align: center;
+.trial-form__text  {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 1.75em;
+    font-weight: 600;
+    position: relative;
+    color: #373737;
 }
 
-.social-proof-gallery {
-    max-width: 1000px;
-    margin: 0px auto 0px;
-}
-
-.social-proof-card {
-    border-radius: 3px;
-    box-shadow: 2px 2px 15px #efefef;
-    max-width: 450px;
-    margin: 20px;
+.trial input[type="submit"] {
+    background-color: white;
+    color: #374785;
 }
 
 .social-proof-card__title {
@@ -141,33 +140,97 @@ header, main, footer {
     text-align: center;
 }
 
-.trial-form {
-    display: block;
-    width: 100%;
-    background-color: #374785;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%2333427d' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%232f3e75' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%232c396e' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23283566' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2324305e' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
-    padding: 3em 0 3em 0;
+.link-box__title {
+    font-weight: 600;
+}
+
+/* Modifier -----------------------------------------------------------*/
+.reinforcement-statement--centered {
     text-align: center;
 }
 
-.trial-form__text  {
-    font-family: 'Playfair Display', sans-serif;
-    font-size: 1.75em;
-    position: relative;
-    color: white;
+/* Nav bar stickiness -------------------------------------------------*/
+#nav-bar {
+    overflow: hidden;
+    position: fixed;
+    background: white;
+    top: 0;
+    width: 100%
 }
 
-.trial input[type="submit"] {
-    background-color: white;
-    color: #374785;
+.main {
+    margin-top: 30px;
+}
+  
+/* Generic styles ----------------------------------------------*/
+header a:link {
+    text-decoration: none;
+    color: #C0B283;
+}
+
+header a:link:hover {
+    color: #373737;
+}
+
+header a:link {
+    text-decoration: none;
+    color: #C0B283;
+}
+
+body {
+    background: #f4f4f4;
+    margin: 0px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
+    color: #373737;
+}
+
+main {
+    padding-left: 3%;
+    padding-right: 3%
+}
+
+.styled-heading {
+    font-family: 'Playfair Display', sans-serif;
+    color: #C0B283;
+}
+
+.centered {
+    text-align: center;
+}
+
+.attribution--centered {
+    font-size: .5em;
+    margin-bottom: 3em;
+    text-align: center;
+}
+
+.social-proof-gallery {
+    max-width: 1000px;
+    margin: 0px auto 0px;
+}
+
+.trial-callout {
+    display: block;
+    width: 100%;
+    padding-left: 0%;
+    padding-right: 0%;
 }
 
 .footer-grid-wrapper {
     margin: 50px auto 50px auto;
     padding: 0px 15px 0px 15px;
     max-width: 930px;
+    background: #f4f4f4;
+}
+
+footer a:link {
+    text-decoration: none;
+    color: #373737;
+}
+
+footer a:hover {
+    color: #C0B283;
 }
 
 /* desktop */
